fix test bug on positions (-1) allow for starting with a left margin shift

--- a/src/css/pviz-core.css
+++ b/src/css/pviz-core.css
@@ -96,8 +96,12 @@ g.one-hidden-layer text {
 /*
  * axis
  */
-g.axis line.tick {
+g.axis g.tick line {
     stroke: black;
+}
+g.axis path.domain{
+    stroke: black;
+    fill:none;
 }
 
 /* icons sections!! */
